# lab-oop

lab-oop-1/C#/: .gitignore  Program.cs  Triangle.cs  lab-1.csproj
lab-oop-1/C++/: .gitignore  CMakeLists.txt  Triangle.cpp  Triangle.h  main.cpp
lab-oop-2/C#/: .gitignore.txt  MyGeometryLIb.sln
lab-oop-2/C#/ConsoleApp/: ConsoleApp.csproj  Program.cs
lab-oop-2/C#/MyGeometryLIb/: Triangle.cs
lab-oop-2/C++/: .gitignore  CMakeLists.txt  main.cpp
lab-oop-2/C++/MyClassLib/: Triangle.cpp  Triangle.h
